WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201830
NetworkProcessConnection does not need HashMaps of sessionIDs for Service Workers and IDB
https://bugs.webkit.org/show_bug.cgi?id=201830
Summary
NetworkProcessConnection does not need HashMaps of sessionIDs for Service Wor...
Chris Dumez
Reported
2019-09-16 12:36:05 PDT
NetworkProcessConnection does not need HashMap of sessionIDs for Service Workers and IDB, since we now have one sessionID per WebContent process.
Attachments
Patch
(17.00 KB, patch)
2019-09-16 12:37 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(17.00 KB, patch)
2019-09-16 12:37 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(16.94 KB, patch)
2019-09-16 12:47 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(16.86 KB, patch)
2019-09-16 13:05 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-16 12:37:10 PDT
Created
attachment 378878
[details]
Patch
Chris Dumez
Comment 2
2019-09-16 12:37:58 PDT
Created
attachment 378879
[details]
Patch
Chris Dumez
Comment 3
2019-09-16 12:47:40 PDT
Created
attachment 378880
[details]
Patch
Chris Dumez
Comment 4
2019-09-16 13:05:16 PDT
Created
attachment 378885
[details]
Patch
Geoffrey Garen
Comment 5
2019-09-16 14:05:28 PDT
Comment on
attachment 378885
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=378885&action=review
r=me
> Source/WebKit/NetworkProcess/IndexedDB/WebIDBConnectionToClient.h:76 > + uint64_t messageSenderDestinationID() const final { return 0; }
Are these zero accessors going to be removed in a future patch?
Chris Dumez
Comment 6
2019-09-16 14:20:19 PDT
Comment on
attachment 378885
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=378885&action=review
>> Source/WebKit/NetworkProcess/IndexedDB/WebIDBConnectionToClient.h:76 >> + uint64_t messageSenderDestinationID() const final { return 0; } > > Are these zero accessors going to be removed in a future patch?
I don't think they can. messageSenderDestinationID() is pure virtual on IPC::MessageSender so we have to provide an implementation. It is equivalent to the many send() calls we have that pass 0 as destinationID as last parameter (because there is only one destination on this IPC connection).
Chris Dumez
Comment 7
2019-09-16 14:52:10 PDT
Comment on
attachment 378885
[details]
Patch Clearing flags on attachment: 378885 Committed
r249923
: <
https://trac.webkit.org/changeset/249923
>
Chris Dumez
Comment 8
2019-09-16 14:52:12 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2019-09-16 14:53:18 PDT
<
rdar://problem/55415603
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug